Cleaned code a little bit

--- a/1_Perceptron.ipynb
+++ b/1_Perceptron.ipynb
@@ -199,13 +199,9 @@
     "    for i, _ in enumerate(self.weights):\n",
     "      z += x[i] * self.weights[i]\n",
     "    \n",
-    "    if z > 0.0:\n",
-    "      prediction = 1\n",
-    "    else:\n",
-    "      prediction = 0\n",
-    "    \n",
+    "    prediction = 1 if z > 0.0 else 0\n",
     "    return prediction\n",
-    "  \n",
+    "\n",
     "  def update(self, x, y):\n",
     "    pred = self.forward(x)\n",
     "    error = y - pred\n",
