--- a/6_Differentiation.ipynb
+++ b/6_Differentiation.ipynb
@@ -8,8 +8,7 @@
     "\n",
     "- Derivate usually applies to functions with one variable\n",
     "$$\n",
-    "f(x) = x^{2} \\\\\n",
-    "\\frac{df}{dx} = 2x\n",
+    "f(x) = x^{2} \\hspace{10mm} \\frac{df}{dx} = 2x\n",
     "$$"
    ]
   },
@@ -17,8 +16,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Partial derivative**\n",
-    "- Functions which have more than one"
+    "### **Partial derivatives**\n",
+    "- Derivative of functions which have more than one variable\n",
+    "$$\n",
+    "f(x, y) = x^{2} + y \\\\[10pt]\n",
+    "\\frac{\\partial f}{\\partial x} = 2x \\hspace{10mm} \\frac{\\partial f}{\\partial y} = 1\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Gradients**\n",
+    "\n",
+    "$$\n",
+    "f(x, y) = x^{2} + y \\\\[10pt]\n",
+    "\\nabla f = \\begin{bmatrix} \\frac{\\partial f}{\\partial x} \\\\[5pt] \\frac{\\partial f}{\\partial y} \\end{bmatrix} = \\begin{bmatrix} 2x \\\\ 1 \\end{bmatrix}\n",
+    "$$"
    ]
   }
  ],
