started softmax regression

--- a/3_Linear_Algebra.ipynb
+++ b/3_Linear_Algebra.ipynb
@@ -7,7 +7,7 @@
     "### **Weighted sum in PyTorch using Linear Algebra**\n",
     "\n",
     "$$\n",
-    "z = b + \\sum^{m}_{j = 1}x_{j}w_{j} \\\\\n",
+    "z = b + \\sum^{m}_{j = 1}x_{j}w_{j} \\\\[10pt]\n",
     "z = b + \\textbf{x}\\textbf{w}\n",
     "$$\n",
     "which is basically dot product of $\\textbf{x}$ and $\\textbf{w}$\n",
