Update Perceptron notebook

--- a/1_Perceptron.ipynb
+++ b/1_Perceptron.ipynb
@@ -105,6 +105,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Isolate the features and labels**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
@@ -182,6 +189,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Define a basic perceptron**\n",
+    "\n",
+    "- A perceptron can be considered as very elementary classifier\n",
+    "- It essentially takes the weighted sum of inputs and bias\n",
+    "  - Passes it through a step function to output either $1$ or $0$\n",
+    "$$\n",
+    "z = b + \\textbf{x}\\textbf{w} \\\\[10pt]\n",
+    "prediction = \\begin{cases} 1, \\ z \\geq 0.0 \\\\ 0, \\ z \\lt 0.0 \\end{cases}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
@@ -192,7 +214,7 @@
     "    self.num_features = num_features\n",
     "    self.weights = [0.0 for _ in range(num_features)]\n",
     "    self.bias = 0.0\n",
-    "  \n",
+    "\n",
     "  def forward(self, x):\n",
     "    z = self.bias\n",
     "\n",
