--- a/3_Linear_Algebra.ipynb
+++ b/3_Linear_Algebra.ipynb
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **One more benchmar, but for matrix**"
+    "### **One more benchmark, but for matrix**"
    ]
   },
   {
