--- a/9_Logistic_Regression_using_PyTorch.ipynb
+++ b/9_Logistic_Regression_using_PyTorch.ipynb
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Implement Logistic Regression using Pytorch**"
+    "### **Implement Logistic Regression using Pytorch**"
    ]
   },
   {
