--- a/5_Logistic_Regression.ipynb
+++ b/5_Logistic_Regression.ipynb
@@ -29,8 +29,8 @@
     "\n",
     "- Weights and biases are considered as model parameters\n",
     "$$\n",
-    "z = w_{1} \\cdot x_{1} + b \\\\\n",
-    "a = \\sigma(z) \\\\\n",
+    "z = w_{1} \\cdot x_{1} + b \\\\[10pt]\n",
+    "a = \\sigma(z) \\\\[10pt]\n",
     "loss = \\mathscr{L}(a, y)\n",
     "$$\n",
     "where $a$ is the predicted value, and $y$ is the true value"
