--- a/5_Logistic_Regression.ipynb
+++ b/5_Logistic_Regression.ipynb
@@ -50,7 +50,7 @@
     "$$\n",
     "\\frac{\\partial \\mathscr{L}}{\\partial w_{1}} = \\frac{\\partial \\mathscr{L}}{\\partial a} \\cdot \\frac{\\partial a}{\\partial z} \\cdot \\frac{\\partial z}{\\partial w_{1}}\n",
     "$$\n",
-    "This can also be referred to as ***\"computation graph\"***"
+    "This can also be referred to as **\"computation graph\"**"
    ]
   }
  ],
