--- a/11_Multiclass_Logistic_Regression.ipynb
+++ b/11_Multiclass_Logistic_Regression.ipynb
@@ -242,6 +242,63 @@
     "$$\n",
     "- Do this for all the other rows, if you want lol"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cross_entropy(net_inputs, y):\n",
+    "  activations = torch.softmax(net_inputs, dim = 1)\n",
+    "  y_onehot = F.one_hot(y)\n",
+    "\n",
+    "  train_losses = -torch.sum(torch.log(activations) * y_onehot, dim = 1)\n",
+    "  avg_loss = torch.mean(train_losses)\n",
+    "\n",
+    "  return avg_loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.455)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cross_entropy(net_inputs, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.455)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# PyTorch's implementation\n",
+    "F.cross_entropy(net_inputs, y)"
+   ]
   }
  ],
  "metadata": {
