--- a/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb
+++ b/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb
@@ -44,102 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz to ./mnist/MNIST/raw/train-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./mnist/MNIST/raw/train-images-idx3-ubyte.gz to ./mnist/MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz to ./mnist/MNIST/raw/train-labels-idx1-ubyte.gz\n",
-      "Extracting ./mnist/MNIST/raw/train-labels-idx1-ubyte.gz to ./mnist/MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "2.0%"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz to ./mnist/MNIST/raw/t10k-images-idx3-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./mnist/MNIST/raw/t10k-images-idx3-ubyte.gz to ./mnist/MNIST/raw\n",
-      "\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
-      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz to ./mnist/MNIST/raw/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100.0%"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Extracting ./mnist/MNIST/raw/t10k-labels-idx1-ubyte.gz to ./mnist/MNIST/raw\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
+     "ename": "NameError",
+     "evalue": "name 'datasets' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb Cell 4\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m train_dataset \u001b[39m=\u001b[39m datasets\u001b[39m.\u001b[39mMNIST(\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m   root \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m../datasets/mnist\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m   train \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m,\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m   transform \u001b[39m=\u001b[39m transforms\u001b[39m.\u001b[39mToTensor(),\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m   download \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m )\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m test_dataset \u001b[39m=\u001b[39m datasets\u001b[39m.\u001b[39mMNIST(\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m   root \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m../datasets/mnist\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m   train \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m   transform \u001b[39m=\u001b[39m transforms\u001b[39m.\u001b[39mToTensor()\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/ifkash/Documents/BSCS3004-Deep-Learning-resources/notebooks/14_Multilayer_Perceptron_using_PyTorch_MNIST_dataset.ipynb#W3sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m )\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'datasets' is not defined"
      ]
     }
    ],
