--- a/notebooks/13_Multilayer_Perceptron_using_PyTorch_XOR_dataset.ipynb
+++ b/notebooks/13_Multilayer_Perceptron_using_PyTorch_XOR_dataset.ipynb
@@ -727,8 +727,10 @@
     "  # plot the decision surface\n",
     "  x1_min, x1_max = X[:, 0].min() - 1, X[:, 0].max() + 1\n",
     "  x2_min, x2_max = X[:, 1].min() - 1, X[:, 1].max() + 1\n",
-    "  xx1, xx2 = np.meshgrid(np.arange(x1_min, x1_max, resolution),\n",
-    "                          np.arange(x2_min, x2_max, resolution))\n",
+    "  xx1, xx2 = np.meshgrid(\n",
+    "    np.arange(x1_min, x1_max, resolution),\n",
+    "    np.arange(x2_min, x2_max, resolution)\n",
+    "  )\n",
     "  tensor = torch.tensor(np.array([xx1.ravel(), xx2.ravel()]).T).float()\n",
     "  logits = classifier.forward(tensor)\n",
     "  Z = np.argmax(logits.detach().numpy(), axis=1)\n",
@@ -740,11 +742,13 @@
     "\n",
     "  # plot class samples\n",
     "  for idx, cl in enumerate(np.unique(y)):\n",
-    "    plt.scatter(x=X[y == cl, 0], y=X[y == cl, 1],\n",
-    "                alpha=0.8, color=cmap(idx),\n",
-    "                #edgecolor='black',\n",
-    "                marker=markers[idx], \n",
-    "                label=cl)"
+    "    plt.scatter(\n",
+    "      x = X[y == cl, 0], y=X[y == cl, 1],\n",
+    "      alpha = 0.8,\n",
+    "      color = cmap(idx),\n",
+    "      marker = markers[idx], \n",
+    "      label = cl\n",
+    "    )"
    ]
   },
   {
