Fundamentals of CNN

--- a/notebooks/17_Convolutional_Neural_Networks.ipynb
+++ b/notebooks/17_Convolutional_Neural_Networks.ipynb
@@ -233,6 +233,198 @@
    "source": [
     "layer.weight.shape"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Max Pooling**\n",
+    "- Kernel is of size $2 \\times 2$\n",
+    "- Take the max value in the kernel size, as depicted by the diagram\n",
+    "\n",
+    "![](../images/max_pooling.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Average Pooling**\n",
+    "- Similar to Max Pooling, but takes the average of values in the kernel window\n",
+    "\n",
+    "![](../images/avg_pooling.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Which pooling works better is a Hyperparameter, often Max pooling tend to work better\n",
+    "- Typical pooling layers don't have any learnable parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**A typical setup**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([16, 26, 26])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layers_with_pooling = torch.nn.Sequential(\n",
+    "  torch.nn.Conv2d(3, 8, kernel_size = 3),\n",
+    "  torch.nn.MaxPool2d(kernel_size = 2, stride = 2),\n",
+    "  torch.nn.Conv2d(8, 16, kernel_size = 3),\n",
+    "  torch.nn.MaxPool2d(kernel_size = 2, stride = 2)\n",
+    ")\n",
+    "\n",
+    "example = torch.rand(3, 110, 110)\n",
+    "layers_with_pooling(example).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Without pooling layers**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([16, 106, 106])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layers_NO_pooling = torch.nn.Sequential(\n",
+    "  torch.nn.Conv2d(3, 8, kernel_size = 3),\n",
+    "  torch.nn.Conv2d(8, 16, kernel_size = 3)\n",
+    ")\n",
+    "\n",
+    "example = torch.rand(3, 110, 110)\n",
+    "layers_NO_pooling(example).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Without pooling layers, but with stride = 2**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([16, 26, 26])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "layers_NO_pooling_stride_2 = torch.nn.Sequential(\n",
+    "  torch.nn.Conv2d(3, 8, kernel_size = 3, stride = 2),\n",
+    "  torch.nn.Conv2d(8, 16, kernel_size = 3, stride = 2)\n",
+    ")\n",
+    "\n",
+    "example = torch.rand(3, 110, 110)\n",
+    "layers_NO_pooling_stride_2(example).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Equation to calculate the output width (or height) of a feature map**\n",
+    "$$\n",
+    "O = \\frac{W - K + 2P}{S} + 1\n",
+    "$$\n",
+    "- $O$ Output width\n",
+    "- $W$ Input width\n",
+    "- $K$ Kernel width\n",
+    "- $P$ Padding\n",
+    "- $S$ Stride"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### **Example**\n",
+    "- $W = 100$\n",
+    "- $K = 3$\n",
+    "- $P = 0$\n",
+    "- $S = 1$\n",
+    "\n",
+    "$$\n",
+    "O = \\frac{100 - 3 + 0}{1} + 1 = 98\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 98, 98])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In PyTorch\n",
+    "layer = torch.nn.Conv2d(1, 1, kernel_size = 3, padding = 0, stride = 1)\n",
+    "example = torch.rand(1, 100, 100)\n",
+    "layer(example).shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Padding**\n",
+    "\n",
+    "![](../images/padding_no_padding.png)"
+   ]
   }
  ],
  "metadata": {
