--- a/notebooks/18_CNN_Architectures.ipynb
+++ b/notebooks/18_CNN_Architectures.ipynb
@@ -169,6 +169,73 @@
     "\n",
     "print(f\"Model size: {size:.3f}GB\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**We do NOT design CNN architectures from scratch, instead we adopt popular architectures**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **AlexNet**\n",
+    "- Won ImageNet 2012 competition\n",
+    "- One of the first CNNs utilizing GPUs for efficient training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **VGG16**\n",
+    "- Same basic architecture, but more layers, bigger size"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **GoogLeNet/Inception**\n",
+    "![](../images/googlenet.png)\n",
+    "- **Inception modules:** Use multiple convolution layers with smaller kernels in parallel\n",
+    "- Keeps model smaller\n",
+    "- Extract features at various scales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![](../images/googlenet_loss.png)\n",
+    "- There's auxiliary loss function in Inception\n",
+    "- Total loss is basically the sum of all these losses\n",
+    "- Sometimes, it's very hard to train very large neural networks\n",
+    "- In back propagation, the signal sometimes degrade when we go from this output layer to the far away input layer\n",
+    "- By having these auxiliary losses, we can ensure that each small sub-part of the network runs well, which then helps with overall training of the network"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **ResNet-34, 50, 101**\n",
+    "- Stands for Residual Neural Networks\n",
+    "- The number refers to the number of layers\n",
+    "- The key idea here is \"skip connections\"\n",
+    "  - It can ignore \"bad\" layers if stronger signal during backpropagation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Convolutional Vision Transformer Hybrid**\n",
+    "- Transformers can also be used for vision tasks\n",
+    "- It combines convolutional networks and transformers based on self-attention"
+   ]
   }
  ],
  "metadata": {
