--- a/notes/week-1/Notes.ipynb
+++ b/notes/week-1/Notes.ipynb
@@ -136,6 +136,43 @@
     "y = AND(X)\n",
     "y"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OR(x):\n",
+    "  THETA = 1\n",
+    "  y = np.zeros(len(x))\n",
+    "\n",
+    "  for i, x_ in enumerate(x):\n",
+    "    y[i] = 1 if np.sum(x_) >= THETA else 0\n",
+    "  \n",
+    "  return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 1., 1., 1., 1., 1., 1., 1.])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y = OR(X)\n",
+    "y"
+   ]
   }
  ],
  "metadata": {
