--- a/notes/week-1/Notes.ipynb
+++ b/notes/week-1/Notes.ipynb
@@ -173,6 +173,63 @@
     "y = OR(X)\n",
     "y"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **Geometric interpretation of the OR function**\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <image src=\"./assets/OR-MP_neuron.png\" alt=\"MP Neuron (OR)\" height=\"256\" />\n",
+    "</p>\n",
+    "\n",
+    "$$\n",
+    "x_{1} + x_{2} = \\sum^{2}_{i = 1} x_{i} \\geq 1\n",
+    "$$\n",
+    "\n",
+    "- All inputs which produce the output $0$ will be on one side $\\sum^{n}_{i = 1} x_{i} \\lt \\theta$ of the line\n",
+    "- All inputs which produce the output $1$ will be on the other side $\\sum^{n}_{i = 1} x_{i} \\geq \\theta$ of the line"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"571.5\"\n",
+       "            src=\"https://www.geogebra.org/material/iframe/id/mahjpakn/width/700/height/500/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/true/ctl/false?style=border%3A+1px+solid+black\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fb1e0455cd0>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Hold Shift + Left click to pan the graph\n",
+    "from IPython.display import IFrame\n",
+    "IFrame(\n",
+    "  'https://www.geogebra.org/material/iframe/id/mahjpakn/width/700/height/500/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/true/ctl/false',\n",
+    "  width = 800,\n",
+    "  height = 571.5,\n",
+    "  style = 'border: 1px solid black'\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
