--- a/notes/week-1/Notes.ipynb
+++ b/notes/week-1/Notes.ipynb
@@ -230,6 +230,53 @@
     "  style = 'border: 1px solid black'\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**What if we have more than 2 inputs?**\n",
+    "- Instead of a line, we will have a plane"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"800\"\n",
+       "            height=\"571.5\"\n",
+       "            src=\"https://www.geogebra.org/material/iframe/id/qekt8th2/width/700/height/500/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/true/ctl/false?style=border%3A+1px+solid+black\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fb1e04569d0>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Hold Shift + Left click to pan the graph\n",
+    "from IPython.display import IFrame\n",
+    "IFrame(\n",
+    "  'https://www.geogebra.org/material/iframe/id/qekt8th2/width/700/height/500/border/888888/sfsb/true/smb/false/stb/false/stbh/false/ai/false/asb/false/sri/false/rc/false/ld/false/sdz/true/ctl/false',\n",
+    "  width = 800,\n",
+    "  height = 571.5,\n",
+    "  style = 'border: 1px solid black'\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
