--- a/notes/week-1/Notes.ipynb
+++ b/notes/week-1/Notes.ipynb
@@ -283,6 +283,21 @@
     "  style = 'border: 1px solid black'\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Perceptrons**\n",
+    "\n",
+    "<p align=\"center\">\n",
+    "  <image src=\"./assets/perceptron.png\" alt=\"Perceptron\" height=\"256\" />\n",
+    "</p>\n",
+    "\n",
+    "- It is a more general computation model compared to MP neuron\n",
+    "- This introduced numerical weights for inputs and a mechanism for learning these weights\n",
+    "- Inputs were no longer limited to boolean values"
+   ]
   }
  ],
  "metadata": {
