--- a/notes/week-1/Notes.ipynb
+++ b/notes/week-1/Notes.ipynb
@@ -296,7 +296,29 @@
     "\n",
     "- It is a more general computation model compared to MP neuron\n",
     "- This introduced numerical weights for inputs and a mechanism for learning these weights\n",
-    "- Inputs were no longer limited to boolean values"
+    "- Inputs were no longer limited to boolean values\n",
+    "\n",
+    "$$\n",
+    "y = 1 \\hspace{10pt} \\text{if} \\sum^{n}_{i = 1} w_{i} \\ast x_{i} \\geq \\theta\n",
+    "$$\n",
+    "$$\n",
+    "y = 0 \\hspace{10pt} \\text{if} \\sum^{n}_{i = 1} w_{i} \\ast x_{i} \\lt \\theta\n",
+    "$$\n",
+    "and the above equations can be re-written as\n",
+    "$$\n",
+    "y = 1 \\hspace{10pt} \\text{if} \\sum^{n}_{i = 1} w_{i} \\ast x_{i} - \\theta \\geq 0\n",
+    "$$\n",
+    "$$\n",
+    "y = 0 \\hspace{10pt} \\text{if} \\sum^{n}_{i = 1} w_{i} \\ast x_{i} - \\theta \\lt 0\n",
+    "$$\n",
+    "which again can be simplified to a more accepted convention\n",
+    "$$\n",
+    "y = 1 \\hspace{10pt} \\text{if} \\sum^{n}_{i = 0} w_{i} \\ast x_{i} \\geq 0\n",
+    "$$\n",
+    "$$\n",
+    "y = 0 \\hspace{10pt} \\text{if} \\sum^{n}_{i = 0} w_{i} \\ast x_{i} \\lt 0\n",
+    "$$\n",
+    "where $x_{0} = 1$ and $w_{0} = - \\theta$"
    ]
   }
  ],
